# zlib_simple

./: CMakeLists.txt  README.md
SampleTexts/: msg.txt
src/: zlib_pipe.cpp
